--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -117,7 +117,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.70 (Safe Replace in safeClass)</div>
+<div class="version">Version: Beta 0.0.71 (Full Guarded Replace Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
