--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -6,35 +6,6 @@
 <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
 <title>IFWL F1 Leaderboard</title>
 <style>
-.driver-cell {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.driver-number {
-  font-size: 2rem;
-  font-weight: bold;
-  font-style: italic;
-  color: black;
-  min-width: 3rem;
-  text-align: right;
-}
-
-.car-image {
-  height: 40px;
-  margin-right: 0.5rem;
-}
-.driver-number {
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin-right: 0.5rem;
-  font-style: italic;
-  color: black;
-  display: inline-block;
-  min-width: 3rem;
-  text-align: right;
-}
     body {
       margin:0; padding:20px;
       font-family:Arial,sans-serif;
@@ -117,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.67 (Driver Number Visible Fix)</div>
+<div class="version">Version: Beta 0.0.72 (Arrow Size + Ferrari Red Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
