--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,207 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IFWL F1 Leaderboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: url('ifwl_bg.webp') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0;
-      padding: 20px;
-    }
-    h1, h2 {
-      text-align: center;
-      color: #000;
-    }
-    .version {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      font-size: 0.8em;
-      color: #ccc;
-    }
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 10px;
-    }
-    .header img {
-      height: 48px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: rgba(0, 0, 0, 0.75);
-      margin: 20px 0;
-      border-radius: 8px;
-      overflow: hidden;
-      color: white;
-    }
-    th, td {
-      padding: 10px;
-      text-align: center;
-      vertical-align: middle;
-      border-bottom: 1px solid #333;
-    }
-    th {
-      background: #333;
-      text-transform: uppercase;
-      font-weight: bold;
-      color: #000;
-    }
-    tr:hover {
-      background: rgba(255, 255, 255, 0.05);
-    }
-    img.logo {
-      height: 48px;
-      vertical-align: middle;
-      margin-right: 8px;
-    }
-    .driver-row {
-      position: relative;
-      background-size: 100px auto;
-      background-position: right center;
-      background-repeat: no-repeat;
-    }
-
-    /* Corrected Team Colors and Logos */
-    .team-Alpine             { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
-    .team-Aston\ Martin     { background-color: #004940; background-image: url('ASTONLOGO.webp'); }
-    .team-Ferrari            { background-color: #DC0000; background-image: url('FERRARILOGO.webp'); }
-    .team-Haas               { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
-    .team-Kick\ Sauber      { background-color: #000000; background-image: url('KICKLOGO.webp'); }
-    .team-Mclaren            { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
-    .team-Mercedes           { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
-    .team-Racing\ Bulls     { background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
-    .team-Red\ Bull\ Racing{ background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
-    .team-Williams           { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-Reserve            { background-color: #FFFFFF; color: black; background-image: url('RESERVE LOGO.webp'); }
-
-    .team-logo {
-      height: 40px;
-      margin-left: 10px;
-      opacity: 1 !important;
-      mix-blend-mode: normal !important;
-      filter: none !important;
-    }
-  </style>
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1.0" name="viewport"/>
+<title>IFWL F1 Leaderboard</title>
+<style>
+  body {
+    margin:0; padding:20px;
+    font-family:Arial,sans-serif;
+    background:url('ifwl_bg.webp')no-repeat center center fixed;
+    background-size:cover;
+  }
+  h1,h2 { text-align:center; color:#000; margin:8px 0; }
+  .version {
+    position:fixed; top:10px; left:10px;
+    background:rgba(255,255,255,0.7); padding:2px 6px;
+    font-size:0.8em; border-radius:4px;
+  }
+  .header {
+    display:flex; align-items:center; justify-content:center;
+    gap:20px; margin-bottom:10px;
+  }
+  .header img { height:48px; }
+  .join-series { text-align:center; margin:12px 0; }
+  .join-series a {
+    background:#1B1443; color:#fff; text-decoration:none;
+    padding:10px 20px; border-radius:4px; font-weight:bold;
+  }
+  table {
+    width:100%; border-collapse:collapse;
+    background:rgba(0,0,0,0.75); margin:20px 0;
+    border-radius:8px; overflow:hidden; color:#fff;
+  }
+  th, td {
+    padding:10px; text-align:center;
+    border-bottom:1px solid #333;
+  }
+  th {
+    background:#333; text-transform:uppercase; font-weight:bold;
+  }
+  tr:hover { background:rgba(255,255,255,0.1); }
+  img.car {
+    height:48px; vertical-align:middle; margin:0 8px 0 0;
+  }
+  img.logo {
+    height:40px; float:right; margin-left:10px;
+    opacity:1!important; filter:none!important;
+  }
+  .driver-number {
+    display:inline-block;
+    font-size:4em;
+    font-weight:bold;
+    font-style:italic;
+    line-height:1;
+    color:#000;
+    background:none;
+    padding:0;
+    margin-right:8px;
+    vertical-align:middle;
+    border-radius:0;
+  }
+  .team-ALPINE { background-color:#0090FF; }
+  .team-ASTON-MARTIN { background-color:#004940; }
+  .team-KICK-SAUBER { background-color:#000000; }
+  .team-RED-BULL-RACING, .team-RACING-BULLS { background-color:#1B1443; }
+  .team-MERCEDES { background-color:#00D2BE; }
+  .team-MCLAREN { background-color:#FF8700; }
+  .team-FERRARI { background-color:#790004; }
+  .team-HAAS { background-color:#B6BABD; }
+  .team-WILLIAMS { background-color:#005AFF; }
+  .team-RESERVE { background-color:#FFFFFF; color:#000; }
+  .arrow-icon {
+    height:64px; width:64px;
+    margin-left:6px; vertical-align:middle;
+  }
+</style>
 </head>
 <body>
-  <div class="version">Version: Beta 0.0.20 (Fixed Colors & Logos)</div>
-  <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
-    <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
-  </div>
+<div class="version">Version: Beta 0.0.52 (Display Name Fix + Arrows Working)</div>
+<div class="header">
+  <img alt="IFWL Logo" src="ifwl_logo.png"/>
+  <h1>IFWL F1 Leaderboard</h1>
+  <img alt="IFWL Logo" src="ifwl_logo.png"/>
+</div>
+<div class="join-series">
+  <a href="https://www.thesimgrid.com/championships/15239" target="_blank">Join our latest series here</a>
+</div>
+<h2>Driver Standings</h2>
+<table id="driver-table"><thead><tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr></thead><tbody></tbody></table>
+<h2>Constructors Standings</h2>
+<table id="constructor-table"><thead><tr><th>TEAM</th><th>TOTAL POINTS</th></tr></thead><tbody></tbody></table>
+<h2>Unassigned Drivers</h2>
+<table id="unassigned-table"><thead><tr><th>DRIVER</th></tr></thead><tbody></tbody></table>
+<script>
+const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+const teamCars = {
+  "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp","HAAS":"HAAS.webp",
+  "MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp","RACING BULLS":"RACINGBULLS.webp",
+  "RED BULL RACING":"RBR.webp","KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
+};
+const teamLogos = {
+  "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
+  "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
+  "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp","KICK SAUBER":"KICKLOGO.webp",
+  "RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
+};
+const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
-  <h2>Driver Standings</h2>
-  <table id="driverTable">
-    <thead>
-      <tr>
-        <th>Driver</th>
-        <th>Team</th>
-        <th>Total Points</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
+.then(r => r.text())
+.then(t => JSON.parse(t.substr(47).slice(0,-2)))
+.then(j => {
+  const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
+  const dBody = document.querySelector("#driver-table tbody");
+  const cBody = document.querySelector("#constructor-table tbody");
+  const uBody = document.querySelector("#unassigned-table tbody");
+  dBody.innerHTML = cBody.innerHTML = uBody.innerHTML = "";
 
-  <h2>Constructors Standings</h2>
-  <table id="constructorTable">
-    <thead>
-      <tr>
-        <th>Team</th>
-        <th>Total Points</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  const driverMap = {};
+  const prevDriverMap = {};
+  const currConstructorTotals = {};
+  const prevConstructorTotals = {};
 
-  <h2>Unassigned Drivers</h2>
-  <table id="unassignedTable">
-    <thead>
-      <tr>
-        <th>Driver</th>
-        <th>Team</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  function getPrevTotal(r) {
+    return r.slice(2, 17).reduce((acc, val) => acc + (parseInt(val) || 0), 0);
+  }
 
-  <script>
-    const sheetID = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-    const sheetName = "Sheet1";
-    const base = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}`;
-    const teamLogos = {
-      "ALPINE": "ALPINE.webp",
-      "ASTON MARTIN": "ASTON.webp",
-      "FERRARI": "FERRARI.webp",
-      "HAAS": "HAAS.webp",
-      "MCLAREN": "MCLAREN.webp",
-      "MERCEDES": "MERCEDES.webp",
-      "RACING BULLS": "RACINGBULLS.webp",
-      "RED BULL RACING": "RBR.webp",
-      "KICK SAUBER": "SAUBER.webp",
-      "RESERVE": "RESERVE.webp",
-      "WILLIAMS": "WILLIAMS.webp"
-    };
+  rows.forEach(r => {
+    const raw = (r[0] || "") + "";
+    const displayName = raw.trim();
+    const compareName = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim().toUpperCase();
+    const name = compareName;
+    const team = (r[1] || "").trim();
+    const currPts = parseInt(r[18]) || 0;
+    const prevPts = getPrevTotal(r);
 
-    function formatTeamClass(team) {
-      return team ? "team-" + team.toUpperCase().replace(/ /g, "\ ") : "";
+    if (!name) return;
+
+    if (!driverMap[name] || currPts > driverMap[name].pts) driverMap[name] = { name, pts: currPts, team };
+    if (!prevDriverMap[name] || prevPts > prevDriverMap[name].pts) prevDriverMap[name] = { name, pts: prevPts };
+
+    if (team) {
+      currConstructorTotals[team] = (currConstructorTotals[team] || 0) + currPts;
+      prevConstructorTotals[team] = (prevConstructorTotals[team] || 0) + prevPts;
     }
+  });
 
-    fetch(base)
-      .then(res => res.text())
-      .then(rep => {
-        const data = JSON.parse(rep.substr(47).slice(0, -2)).table.rows;
-        const drivers = data.map(r => ({
-          driver: r.c[0]?.v,
-          team: r.c[1]?.v,
-          points: parseInt(r.c[18]?.v || 0)
-        })).filter(d => d.driver);
+  const currDriverTotals = Object.values(driverMap);
+  const prevDriverTotals = Object.values(prevDriverMap);
 
-        const driverTable = document.getElementById("driverTable").querySelector("tbody");
-        const constructorTable = document.getElementById("constructorTable").querySelector("tbody");
-        const unassignedTable = document.getElementById("unassignedTable").querySelector("tbody");
+  function rankMap(list) {
+    return list.sort((a, b) => b.pts - a.pts).map((e, i) => ({ ...e, rank: i + 1 }))
+               .reduce((acc, e) => { acc[e.name] = e.rank; return acc; }, {});
+  }
 
-        drivers.forEach(d => {
-          if (!d.team) {
-            const tr = document.createElement("tr");
-            tr.innerHTML = `<td>${d.driver}</td><td>Unassigned</td>`;
-            unassignedTable.appendChild(tr);
-            return;
-          }
+  const currRanks = rankMap([...currDriverTotals]);
+  const prevRanks = rankMap([...prevDriverTotals]);
 
-          const row = document.createElement("tr");
-          row.className = `driver-row ${formatTeamClass(d.team)}`;
-          row.innerHTML = `
-            <td>${d.driver}</td>
-            <td><img class="logo" src="${teamLogos[d.team.toUpperCase()] || ""}" alt="${d.team}" /> ${d.team}</td>
-            <td>${d.points}</td>
-          `;
-          driverTable.appendChild(row);
-        });
+  currDriverTotals.sort((a, b) => b.pts - a.pts).forEach(entry => {
+    const name = entry.name;
+    const team = driverMap[name].team;
+    const pts = entry.pts;
+    const teamUpper = (team || "").toUpperCase();
+    const prevRank = prevRanks[name] || 0;
+       const currRank = currRanks[name] || 0;
+       const diff = prevRank - currRank;
+    let arrow = "";
+    if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+    else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
-        const constructors = {};
-        drivers.forEach(d => {
-          if (d.team) constructors[d.team] = (constructors[d.team] || 0) + d.points;
-        });
+    const tr = document.createElement("tr");
+    tr.className = safeClass(teamUpper);
+    tr.innerHTML = `
+      <td>${displayName}</td>
+      <td>
+        <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+        ${team}
+        <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+      </td>
+      <td>${pts} ${arrow}</td>`;
+    dBody.appendChild(tr);
+  });
 
-        Object.entries(constructors).forEach(([team, points]) => {
-          const row = document.createElement("tr");
-          row.className = `driver-row ${formatTeamClass(team)}`;
-          row.innerHTML = `
-            <td><img class="logo" src="${teamLogos[team.toUpperCase()] || ""}" alt="${team}" /> ${team}</td>
-            <td>${points}</td>
-          `;
-          constructorTable.appendChild(row);
-        });
-      });
-  </script>
+  const currCRank = rankMap(Object.entries(currConstructorTotals).map(([name, pts]) => ({ name, pts })));
+  const prevCRank = rankMap(Object.entries(prevConstructorTotals).map(([name, pts]) => ({ name, pts })));
+
+  Object.entries(currConstructorTotals).sort((a, b) => b[1] - a[1]).forEach(([team, pts]) => {
+    const teamUpper = team.toUpperCase();
+    const diff = (prevCRank[team] || 0) - (currCRank[team] || 0);
+    let arrow = "";
+    if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+    else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+
+    const tr = document.createElement("tr");
+    tr.className = safeClass(teamUpper);
+    tr.innerHTML = `
+      <td>
+        <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+        ${team}
+        <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+      </td>
+      <td>${pts} ${arrow}</td>`;
+    cBody.appendChild(tr);
+  });
+});
+</script>
 </body>
 </html>
