--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -6,6 +6,16 @@
 <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
 <title>IFWL F1 Leaderboard</title>
 <style>
+.driver-number {
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+  font-style: italic;
+  color: black;
+  display: inline-block;
+  min-width: 3rem;
+  text-align: right;
+}
     body {
       margin:0; padding:20px;
       font-family:Arial,sans-serif;
@@ -88,7 +98,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.60 (Driver Number Scope Fix)</div>
+<div class="version">Version: Beta 0.0.65 (Driver Number Styling Restored)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -211,13 +221,10 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
 
-        const displayName = driverMap[name].displayName || name;
-    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
-    const driverNumber = numberMatch ? numberMatch[1] : "";
-    const tr = document.createElement("tr");
+        const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
-          <td><span class='driver-number'>${driverNumber}</span>${displayName.replace(/^\[\s*\d+\s*\]\s*-\s*/, '').trim()}</td>
+          <td>${name}</td>
           <td>
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
@@ -241,10 +248,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
 
-        const displayName = driverMap[name].displayName || name;
-    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
-    const driverNumber = numberMatch ? numberMatch[1] : "";
-    const tr = document.createElement("tr");
+        const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
           <td>
