--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -85,6 +85,65 @@
   margin-left: 6px;
   vertical-align: middle;
 }
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .header img {
+    height: 32px;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  .join-series a {
+    display: inline-block;
+    font-size: 0.9em;
+    padding: 8px 16px;
+  }
+
+  table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+    font-size: 0.9em;
+  }
+
+  th, td {
+    padding: 6px;
+  }
+
+  img.car {
+    height: 32px;
+    margin: 0 4px 0 0;
+  }
+
+  img.logo {
+    height: 24px;
+    margin-left: 6px;
+  }
+
+  .arrow-icon {
+    height: 32px;
+    width: 32px;
+    margin-left: 4px;
+  }
+
+  .driver-number {
+    font-size: 2em;
+  }
+
+  .version {
+    font-size: 0.7em;
+    padding: 1px 4px;
+  }
+}
+
 </style>
 </head>
 <body>
