--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -144,10 +144,27 @@
   }
 }
 
+
+.free-team {
+  background: rgba(255, 255, 255, 0.8);
+  color: #000;
+  padding: 10px;
+  margin: 6px 0;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.free-count {
+  font-weight: bold;
+  margin-left: auto;
+}
+
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.47 (Arrow Size + Ferrari Red Fix)</div>
+<div class="version">Version: Beta 0.0.48 (Added Team Slots Free section using empty rows)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -172,6 +189,8 @@
 </thead>
 <tbody></tbody>
 </table>
+<h2>Team Slots Free</h2>
+<div id="free-slots" class="team-slots"></div>
 <h2>Unassigned Drivers</h2>
 <table id="unassigned-table">
 <thead><tr><th>DRIVER</th></tr></thead>
@@ -309,6 +328,36 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         cBody.appendChild(tr);
       });
   });
+
+    // --- Team Slots Free Section ---
+    const teamSlotLimit = 2;
+    const teamSlotCounts = {};
+    const teamFreeCounts = {};
+
+    rows.forEach(r => {
+      const driver = (r[0] || "").trim();
+      const team = (r[1] || "").trim();
+      if (!team) return;
+      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
+      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
+    });
+
+    const freeContainer = document.getElementById("free-slots");
+    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
+      if (freeCount > 0) {
+        const teamUpper = team.toUpperCase();
+        const div = document.createElement("div");
+        div.className = "free-team";
+        div.innerHTML = \`
+          <img src="\${teamCars[teamUpper]}" class="car" alt="\${team}"/>
+          \${team}
+          <img src="\${teamLogos[teamUpper]}" class="logo" alt="\${team}"/>
+          <span class="free-count">(\${freeCount} slot\${freeCount > 1 ? 's' : ''} free)</span>
+        \`;
+        freeContainer.appendChild(div);
+      }
+    });
+
 </script>
 </body>
 </html>
