--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -164,7 +164,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.48 (Added Team Slots Free section using empty rows)</div>
+<div class="version">Version: Beta 0.0.49 (Fixed syntax error in Team Slots Free section)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -348,12 +348,12 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const teamUpper = team.toUpperCase();
         const div = document.createElement("div");
         div.className = "free-team";
-        div.innerHTML = \`
-          <img src="\${teamCars[teamUpper]}" class="car" alt="\${team}"/>
-          \${team}
-          <img src="\${teamLogos[teamUpper]}" class="logo" alt="\${team}"/>
-          <span class="free-count">(\${freeCount} slot\${freeCount > 1 ? 's' : ''} free)</span>
-        \`;
+        div.innerHTML = `
+          <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+          ${team}
+          <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+          <span class="free-count">(${freeCount} slot${freeCount > 1 ? 's' : ''} free)</span>
+        `;
         freeContainer.appendChild(div);
       }
     });
