--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -164,7 +164,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.49 (Fixed syntax error in Team Slots Free section)</div>
+<div class="version">Version: Beta 0.0.50 (Fixed variable scope error and changed free slots to table layout)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -190,7 +190,10 @@
 <tbody></tbody>
 </table>
 <h2>Team Slots Free</h2>
-<div id="free-slots" class="team-slots"></div>
+<table id="free-slots-table">
+  <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
+  <tbody></tbody>
+</table>
 <h2>Unassigned Drivers</h2>
 <table id="unassigned-table">
 <thead><tr><th>DRIVER</th></tr></thead>
@@ -356,7 +359,38 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         `;
         freeContainer.appendChild(div);
       }
+    
+    // --- Team Slots Free Section ---
+    const teamSlotLimit = 2;
+    const teamSlotCounts = {};
+    const teamFreeCounts = {};
+
+    rows.forEach(r => {
+      const driver = (r[0] || "").trim();
+      const team = (r[1] || "").trim();
+      if (!team) return;
+      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
+      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
     });
+
+    const freeTbody = document.querySelector("#free-slots-table tbody");
+    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
+      if (freeCount > 0) {
+        const teamUpper = team.toUpperCase();
+        const tr = document.createElement("tr");
+        tr.className = safeClass(teamUpper);
+        tr.innerHTML = \`
+          <td>
+            <img src="\${teamCars[teamUpper]}" class="car" alt="\${team}"/>
+            \${team}
+            <img src="\${teamLogos[teamUpper]}" class="logo" alt="\${team}"/>
+          </td>
+          <td>\${freeCount} slot\${freeCount > 1 ? 's' : ''} free</td>
+        \`;
+        freeTbody.appendChild(tr);
+      }
+    });
+});
 
 </script>
 </body>
