--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -164,7 +164,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.51 (Fixed JS template literal encoding in free slots logic)</div>
+<div class="version">Version: Beta 0.0.52 (Added Team Slots Free table section)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -189,11 +189,13 @@
 </thead>
 <tbody></tbody>
 </table>
+
 <h2>Team Slots Free</h2>
 <table id="free-slots-table">
   <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
   <tbody></tbody>
 </table>
+
 <h2>Unassigned Drivers</h2>
 <table id="unassigned-table">
 <thead><tr><th>DRIVER</th></tr></thead>
@@ -330,67 +332,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
           <td>${pts} ${arrow}</td>`;
         cBody.appendChild(tr);
       });
-  });
-
-    // --- Team Slots Free Section ---
-    const teamSlotLimit = 2;
-    const teamSlotCounts = {};
-    const teamFreeCounts = {};
-
-    rows.forEach(r => {
-      const driver = (r[0] || "").trim();
-      const team = (r[1] || "").trim();
-      if (!team) return;
-      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
-      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
-    });
-
-    const freeContainer = document.getElementById("free-slots");
-    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
-      if (freeCount > 0) {
-        const teamUpper = team.toUpperCase();
-        const div = document.createElement("div");
-        div.className = "free-team";
-        div.innerHTML = `
-          <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-          ${team}
-          <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          <span class="free-count">(${freeCount} slot${freeCount > 1 ? 's' : ''} free)</span>
-        `;
-        freeContainer.appendChild(div);
-      }
-    
-    // --- Team Slots Free Section ---
-    const teamSlotLimit = 2;
-    const teamSlotCounts = {};
-    const teamFreeCounts = {};
-
-    rows.forEach(r => {
-      const driver = (r[0] || "").trim();
-      const team = (r[1] || "").trim();
-      if (!team) return;
-      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
-      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
-    });
-
-    const freeTbody = document.querySelector("#free-slots-table tbody");
-    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
-      if (freeCount > 0) {
-        const teamUpper = team.toUpperCase();
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = \`
-          <td>
-            <img src="\${teamCars[teamUpper]}" class="car" alt="\${team}"/>
-            \${team}
-            <img src="\${teamLogos[teamUpper]}" class="logo" alt="\${team}"/>
-          </td>
-          <td>\${freeCount} slot\${freeCount > 1 ? 's' : ''} free</td>
-        \`;
-        freeTbody.appendChild(tr);
-      }
-    });
-
+  
     // --- Team Slots Free Section ---
     const teamSlotLimit = 2;
     const teamSlotCounts = {};
@@ -422,7 +364,6 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       }
     });
 });
-
 </script>
 </body>
 </html>
