--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -161,10 +161,25 @@
   margin-left: auto;
 }
 
+
+.layout-two-column {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.layout-two-column .half {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .layout-two-column .half {
+    width: 49%;
+  }
+}
+
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.52 (Added Team Slots Free table section)</div>
+<div class="version">Version: Beta 0.0.53 (Layout update: free slots top, standings side-by-side)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -175,6 +190,8 @@
       Join our latest series here
     </a>
 </div>
+<div class="layout-two-column">
+<div class="half">
 <h2>Driver Standings</h2>
 <table id="driver-table">
 <thead>
@@ -182,6 +199,8 @@
 </thead>
 <tbody></tbody>
 </table>
+</div>
+<div class="half">
 <h2>Constructors Standings</h2>
 <table id="constructor-table">
 <thead>
@@ -196,6 +215,8 @@
   <tbody></tbody>
 </table>
 
+</div>
+</div>
 <h2>Unassigned Drivers</h2>
 <table id="unassigned-table">
 <thead><tr><th>DRIVER</th></tr></thead>
