--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.53 (Layout update: free slots top, standings side-by-side)</div>
+<div class="version">Version: Beta 0.0.54 (Final layout: Team Slots Free on top, standings side-by-side)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -190,6 +190,34 @@
       Join our latest series here
     </a>
 </div>
+<div class="layout-two-column">
+<div class="half">
+<h2>Driver Standings</h2>
+<table id="driver-table">
+<thead>
+<tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+<div class="half">
+<h2>Constructors Standings</h2>
+<table id="constructor-table">
+<thead>
+<tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
+</thead>
+<tbody></tbody>
+</table>
+
+
+
+</div>
+</div>
+<h2>Team Slots Free</h2>
+<table id="free-slots-table">
+  <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
+  <tbody></tbody>
+</table>
 <div class="layout-two-column">
 <div class="half">
 <h2>Driver Standings</h2>
