--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.55 (Fix duplicate layout: final correct 3-block structure)</div>
+<div class="version">Version: Beta 0.0.56 (Final clean layout: slots top, standings side-by-side, no ID breaks)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -192,6 +192,42 @@
 </div>
 <div class="layout-two-column">
 <div class="half">
+
+</div>
+<div class="half">
+
+
+
+
+</div>
+</div>
+<h2>Team Slots Free</h2>
+<table id="free-slots-table">
+  <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
+  <tbody></tbody>
+</table>
+
+<div class="layout-two-column">
+  <div class="half">
+    <h2>Driver Standings</h2>
+<table id="driver-table">
+<thead>
+<tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
+</thead>
+<tbody></tbody>
+</table>
+  </div>
+  <div class="half">
+    <h2>Constructors Standings</h2>
+<table id="constructor-table">
+<thead>
+<tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
+</thead>
+<tbody></tbody>
+</table>
+  </div>
+</div>
+
 <h2>Unassigned Drivers</h2>
 <table id="unassigned-table">
 <thead><tr><th>DRIVER</th></tr></thead>
