--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.56 (Final clean layout: slots top, standings side-by-side, no ID breaks)</div>
+<div class="version">Version: Beta 0.0.57 (Added auto-refresh every 5s)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -263,8 +263,9 @@ const teamLogos = {
 };
 const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
-fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
-  .then(r => r.text())
+function loadData() {
+  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
+    .then(r => r.text())
   .then(t => JSON.parse(t.substr(47).slice(0,-2)))
   .then(j => {
     const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
@@ -293,6 +294,8 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       if (!name) return;
 
       prevDriverTotals.push({ name, pts: prevPts });
+}
+
       currDriverTotals.push({ name, pts: currPts });
       driverTeamMap[name] = team;
 
@@ -396,6 +399,12 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       }
     });
 });
+
+
+// Auto-refresh every 5 seconds
+loadData();
+setInterval(loadData, 5000);
+
 </script>
 </body>
 </html>
