--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.57 (Added auto-refresh every 5s)</div>
+<div class="version">Version: Beta 0.0.57.5 (Auto-refresh every 5s from Google Sheets)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -263,9 +263,10 @@ const teamLogos = {
 };
 const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
+
 function loadData() {
-  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
-    .then(r => r.text())
+fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
+  .then(r => r.text())
   .then(t => JSON.parse(t.substr(47).slice(0,-2)))
   .then(j => {
     const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
@@ -295,6 +296,8 @@ function loadData() {
 
       prevDriverTotals.push({ name, pts: prevPts });
 }
+loadData();
+setInterval(loadData, 5000);
 
       currDriverTotals.push({ name, pts: currPts });
       driverTeamMap[name] = team;
@@ -399,12 +402,6 @@ function loadData() {
       }
     });
 });
-
-
-// Auto-refresh every 5 seconds
-loadData();
-setInterval(loadData, 5000);
-
 </script>
 </body>
 </html>
