--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.57.5 (Auto-refresh every 5s from Google Sheets)</div>
+<div class="version">Version: Beta 0.0.58 (Fixed syntax for live auto-update)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -297,7 +297,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       prevDriverTotals.push({ name, pts: prevPts });
 }
 loadData();
-setInterval(loadData, 5000);
+setInterval(() => loadData(), 5000);
 
       currDriverTotals.push({ name, pts: currPts });
       driverTeamMap[name] = team;
