--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -179,7 +179,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.58 (Fixed syntax for live auto-update)</div>
+<div class="version">Version: Beta 0.0.59 (Fixed template literals and syntax for live updates)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
